js/src/tests/test262/built-ins/Number/NEGATIVE_INFINITY/value.js
assert
.
sameValue
(
Number
.
NEGATIVE_INFINITY
-
Infinity
)
;
reportCompare
(
0
0
)
;
